test/libyul/yulSyntaxTests/for_visibility_2.yul
{
	for {} i { let i := 1 } {}
}
// ====
// dialect: evm
// ----
// DeclarationError 8198: (10-11): Identifier not found.
